--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,60 @@
       "Epoch 26/50\n",
       "704/704 [==============================] - 190s 270ms/step - loss: 1.0029 - final_loss: 0.3238 - aux1_loss: 0.3107 - aux2_loss: 0.3684 - final_accuracy: 0.8971 - aux1_accuracy: 0.8977 - aux2_accuracy: 0.8811 - val_loss: 23.3199 - val_final_loss: 7.1017 - val_aux1_loss: 8.1965 - val_aux2_loss: 8.0218 - val_final_accuracy: 0.2706 - val_aux1_accuracy: 0.2325 - val_aux2_accuracy: 0.2368\n",
       "Epoch 27/50\n",
-      "318/704 [============>.................] - ETA: 1:43 - loss: 0.8528 - final_loss: 0.2788 - aux1_loss: 0.2586 - aux2_loss: 0.3153 - final_accuracy: 0.9124 - aux1_accuracy: 0.9166 - aux2_accuracy: 0.8968"
+      "704/704 [==============================] - 196s 278ms/step - loss: 0.9956 - final_loss: 0.3149 - aux1_loss: 0.3098 - aux2_loss: 0.3709 - final_accuracy: 0.9014 - aux1_accuracy: 0.8990 - aux2_accuracy: 0.8813 - val_loss: 23.5037 - val_final_loss: 7.1657 - val_aux1_loss: 8.3563 - val_aux2_loss: 7.9816 - val_final_accuracy: 0.2655 - val_aux1_accuracy: 0.2365 - val_aux2_accuracy: 0.2370\n",
+      "Epoch 28/50\n",
+      "704/704 [==============================] - 191s 271ms/step - loss: 0.9331 - final_loss: 0.3080 - aux1_loss: 0.2867 - aux2_loss: 0.3385 - final_accuracy: 0.9034 - aux1_accuracy: 0.9061 - aux2_accuracy: 0.8917 - val_loss: 23.9746 - val_final_loss: 7.0650 - val_aux1_loss: 8.6648 - val_aux2_loss: 8.2448 - val_final_accuracy: 0.2665 - val_aux1_accuracy: 0.2342 - val_aux2_accuracy: 0.2435\n",
+      "Epoch 29/50\n",
+      "704/704 [==============================] - 190s 270ms/step - loss: 0.9056 - final_loss: 0.2980 - aux1_loss: 0.2779 - aux2_loss: 0.3297 - final_accuracy: 0.9060 - aux1_accuracy: 0.9093 - aux2_accuracy: 0.8936 - val_loss: 24.5359 - val_final_loss: 7.4136 - val_aux1_loss: 8.8030 - val_aux2_loss: 8.3193 - val_final_accuracy: 0.2683 - val_aux1_accuracy: 0.2350 - val_aux2_accuracy: 0.2344\n",
+      "Epoch 30/50\n",
+      "704/704 [==============================] - 189s 269ms/step - loss: 0.8710 - final_loss: 0.2874 - aux1_loss: 0.2665 - aux2_loss: 0.3172 - final_accuracy: 0.9085 - aux1_accuracy: 0.9121 - aux2_accuracy: 0.8972 - val_loss: 24.1955 - val_final_loss: 7.3188 - val_aux1_loss: 8.7749 - val_aux2_loss: 8.1018 - val_final_accuracy: 0.2636 - val_aux1_accuracy: 0.2346 - val_aux2_accuracy: 0.2345\n",
+      "Epoch 31/50\n",
+      "704/704 [==============================] - 189s 269ms/step - loss: 0.8940 - final_loss: 0.2919 - aux1_loss: 0.2784 - aux2_loss: 0.3237 - final_accuracy: 0.9081 - aux1_accuracy: 0.9085 - aux2_accuracy: 0.8965 - val_loss: 23.9102 - val_final_loss: 6.9716 - val_aux1_loss: 8.8375 - val_aux2_loss: 8.1011 - val_final_accuracy: 0.2714 - val_aux1_accuracy: 0.2305 - val_aux2_accuracy: 0.2365\n",
+      "Epoch 32/50\n",
+      "704/704 [==============================] - 189s 269ms/step - loss: 0.7996 - final_loss: 0.2678 - aux1_loss: 0.2365 - aux2_loss: 0.2953 - final_accuracy: 0.9160 - aux1_accuracy: 0.9226 - aux2_accuracy: 0.9058 - val_loss: 25.1169 - val_final_loss: 7.5202 - val_aux1_loss: 9.0898 - val_aux2_loss: 8.5069 - val_final_accuracy: 0.2693 - val_aux1_accuracy: 0.2396 - val_aux2_accuracy: 0.2351\n",
+      "Epoch 33/50\n",
+      "704/704 [==============================] - 189s 269ms/step - loss: 0.8500 - final_loss: 0.2851 - aux1_loss: 0.2587 - aux2_loss: 0.3062 - final_accuracy: 0.9108 - aux1_accuracy: 0.9148 - aux2_accuracy: 0.9013 - val_loss: 25.1017 - val_final_loss: 7.3984 - val_aux1_loss: 9.1450 - val_aux2_loss: 8.5583 - val_final_accuracy: 0.2677 - val_aux1_accuracy: 0.2354 - val_aux2_accuracy: 0.2336\n",
+      "Epoch 34/50\n",
+      "704/704 [==============================] - 192s 273ms/step - loss: 0.7649 - final_loss: 0.2626 - aux1_loss: 0.2216 - aux2_loss: 0.2808 - final_accuracy: 0.9176 - aux1_accuracy: 0.9270 - aux2_accuracy: 0.9093 - val_loss: 26.2261 - val_final_loss: 7.8090 - val_aux1_loss: 9.4218 - val_aux2_loss: 8.9953 - val_final_accuracy: 0.2615 - val_aux1_accuracy: 0.2322 - val_aux2_accuracy: 0.2270\n",
+      "Epoch 35/50\n",
+      "704/704 [==============================] - 196s 278ms/step - loss: 0.7850 - final_loss: 0.2699 - aux1_loss: 0.2304 - aux2_loss: 0.2848 - final_accuracy: 0.9154 - aux1_accuracy: 0.9233 - aux2_accuracy: 0.9096 - val_loss: 26.3194 - val_final_loss: 7.7734 - val_aux1_loss: 9.5346 - val_aux2_loss: 9.0114 - val_final_accuracy: 0.2641 - val_aux1_accuracy: 0.2276 - val_aux2_accuracy: 0.2366\n",
+      "Epoch 36/50\n",
+      "704/704 [==============================] - 195s 277ms/step - loss: 0.7615 - final_loss: 0.2529 - aux1_loss: 0.2193 - aux2_loss: 0.2892 - final_accuracy: 0.9207 - aux1_accuracy: 0.9280 - aux2_accuracy: 0.9076 - val_loss: 25.5850 - val_final_loss: 7.4597 - val_aux1_loss: 9.3998 - val_aux2_loss: 8.7254 - val_final_accuracy: 0.2651 - val_aux1_accuracy: 0.2350 - val_aux2_accuracy: 0.2389\n",
+      "Epoch 37/50\n",
+      "704/704 [==============================] - 195s 277ms/step - loss: 0.7677 - final_loss: 0.2560 - aux1_loss: 0.2321 - aux2_loss: 0.2795 - final_accuracy: 0.9209 - aux1_accuracy: 0.9253 - aux2_accuracy: 0.9111 - val_loss: 25.6615 - val_final_loss: 7.6593 - val_aux1_loss: 9.2387 - val_aux2_loss: 8.7635 - val_final_accuracy: 0.2689 - val_aux1_accuracy: 0.2371 - val_aux2_accuracy: 0.2392\n",
+      "Epoch 38/50\n",
+      "704/704 [==============================] - 195s 277ms/step - loss: 0.7354 - final_loss: 0.2576 - aux1_loss: 0.2105 - aux2_loss: 0.2673 - final_accuracy: 0.9195 - aux1_accuracy: 0.9307 - aux2_accuracy: 0.9149 - val_loss: 25.8715 - val_final_loss: 7.6354 - val_aux1_loss: 9.4714 - val_aux2_loss: 8.7647 - val_final_accuracy: 0.2727 - val_aux1_accuracy: 0.2338 - val_aux2_accuracy: 0.2407\n",
+      "Epoch 39/50\n",
+      "704/704 [==============================] - 195s 277ms/step - loss: 0.7267 - final_loss: 0.2542 - aux1_loss: 0.2075 - aux2_loss: 0.2650 - final_accuracy: 0.9194 - aux1_accuracy: 0.9327 - aux2_accuracy: 0.9155 - val_loss: 26.1393 - val_final_loss: 7.6694 - val_aux1_loss: 9.4731 - val_aux2_loss: 8.9968 - val_final_accuracy: 0.2692 - val_aux1_accuracy: 0.2300 - val_aux2_accuracy: 0.2342\n",
+      "Epoch 40/50\n",
+      "704/704 [==============================] - 195s 276ms/step - loss: 0.7262 - final_loss: 0.2551 - aux1_loss: 0.2033 - aux2_loss: 0.2678 - final_accuracy: 0.9197 - aux1_accuracy: 0.9339 - aux2_accuracy: 0.9140 - val_loss: 26.2919 - val_final_loss: 7.6888 - val_aux1_loss: 9.4989 - val_aux2_loss: 9.1042 - val_final_accuracy: 0.2766 - val_aux1_accuracy: 0.2307 - val_aux2_accuracy: 0.2405\n",
+      "Epoch 41/50\n",
+      "704/704 [==============================] - 195s 276ms/step - loss: 0.6851 - final_loss: 0.2358 - aux1_loss: 0.2004 - aux2_loss: 0.2489 - final_accuracy: 0.9261 - aux1_accuracy: 0.9349 - aux2_accuracy: 0.9200 - val_loss: 26.5237 - val_final_loss: 7.9102 - val_aux1_loss: 9.6476 - val_aux2_loss: 8.9659 - val_final_accuracy: 0.2709 - val_aux1_accuracy: 0.2324 - val_aux2_accuracy: 0.2323\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 42/50\n",
+      "704/704 [==============================] - 189s 268ms/step - loss: 0.6845 - final_loss: 0.2413 - aux1_loss: 0.1978 - aux2_loss: 0.2454 - final_accuracy: 0.9249 - aux1_accuracy: 0.9356 - aux2_accuracy: 0.9212 - val_loss: 27.1801 - val_final_loss: 7.9524 - val_aux1_loss: 10.0313 - val_aux2_loss: 9.1964 - val_final_accuracy: 0.2701 - val_aux1_accuracy: 0.2289 - val_aux2_accuracy: 0.2339\n",
+      "Epoch 43/50\n",
+      "704/704 [==============================] - 189s 269ms/step - loss: 0.6700 - final_loss: 0.2422 - aux1_loss: 0.1850 - aux2_loss: 0.2428 - final_accuracy: 0.9236 - aux1_accuracy: 0.9388 - aux2_accuracy: 0.9223 - val_loss: 27.0471 - val_final_loss: 8.0602 - val_aux1_loss: 9.8742 - val_aux2_loss: 9.1127 - val_final_accuracy: 0.2671 - val_aux1_accuracy: 0.2356 - val_aux2_accuracy: 0.2379\n",
+      "Epoch 44/50\n",
+      "704/704 [==============================] - 189s 269ms/step - loss: 0.6678 - final_loss: 0.2329 - aux1_loss: 0.1866 - aux2_loss: 0.2483 - final_accuracy: 0.9274 - aux1_accuracy: 0.9387 - aux2_accuracy: 0.9205 - val_loss: 27.1834 - val_final_loss: 8.0593 - val_aux1_loss: 9.9843 - val_aux2_loss: 9.1399 - val_final_accuracy: 0.2647 - val_aux1_accuracy: 0.2307 - val_aux2_accuracy: 0.2321\n",
+      "Epoch 45/50\n",
+      "704/704 [==============================] - 189s 269ms/step - loss: 0.6669 - final_loss: 0.2273 - aux1_loss: 0.1953 - aux2_loss: 0.2444 - final_accuracy: 0.9284 - aux1_accuracy: 0.9353 - aux2_accuracy: 0.9229 - val_loss: 26.7836 - val_final_loss: 7.7805 - val_aux1_loss: 10.0268 - val_aux2_loss: 8.9763 - val_final_accuracy: 0.2644 - val_aux1_accuracy: 0.2352 - val_aux2_accuracy: 0.2349\n",
+      "Epoch 46/50\n",
+      "704/704 [==============================] - 194s 276ms/step - loss: 0.6455 - final_loss: 0.2325 - aux1_loss: 0.1766 - aux2_loss: 0.2364 - final_accuracy: 0.9284 - aux1_accuracy: 0.9423 - aux2_accuracy: 0.9245 - val_loss: 27.7639 - val_final_loss: 8.0556 - val_aux1_loss: 10.2957 - val_aux2_loss: 9.4126 - val_final_accuracy: 0.2645 - val_aux1_accuracy: 0.2287 - val_aux2_accuracy: 0.2313\n",
+      "Epoch 47/50\n",
+      "704/704 [==============================] - 196s 278ms/step - loss: 0.6296 - final_loss: 0.2313 - aux1_loss: 0.1767 - aux2_loss: 0.2215 - final_accuracy: 0.9279 - aux1_accuracy: 0.9420 - aux2_accuracy: 0.9283 - val_loss: 27.7692 - val_final_loss: 8.2483 - val_aux1_loss: 10.2561 - val_aux2_loss: 9.2648 - val_final_accuracy: 0.2653 - val_aux1_accuracy: 0.2321 - val_aux2_accuracy: 0.2354\n",
+      "Epoch 48/50\n",
+      "704/704 [==============================] - 196s 278ms/step - loss: 0.6444 - final_loss: 0.2218 - aux1_loss: 0.1793 - aux2_loss: 0.2433 - final_accuracy: 0.9303 - aux1_accuracy: 0.9422 - aux2_accuracy: 0.9234 - val_loss: 27.0621 - val_final_loss: 7.9189 - val_aux1_loss: 10.1356 - val_aux2_loss: 9.0076 - val_final_accuracy: 0.2548 - val_aux1_accuracy: 0.2255 - val_aux2_accuracy: 0.2338\n",
+      "Epoch 49/50\n",
+      "704/704 [==============================] - 196s 279ms/step - loss: 0.6207 - final_loss: 0.2272 - aux1_loss: 0.1640 - aux2_loss: 0.2295 - final_accuracy: 0.9297 - aux1_accuracy: 0.9461 - aux2_accuracy: 0.9267 - val_loss: 28.1626 - val_final_loss: 8.3196 - val_aux1_loss: 10.4088 - val_aux2_loss: 9.4343 - val_final_accuracy: 0.2649 - val_aux1_accuracy: 0.2386 - val_aux2_accuracy: 0.2412\n",
+      "Epoch 50/50\n",
+      "704/704 [==============================] - 196s 279ms/step - loss: 0.6361 - final_loss: 0.2271 - aux1_loss: 0.1816 - aux2_loss: 0.2274 - final_accuracy: 0.9296 - aux1_accuracy: 0.9411 - aux2_accuracy: 0.9264 - val_loss: 27.6959 - val_final_loss: 7.9506 - val_aux1_loss: 10.4079 - val_aux2_loss: 9.3375 - val_final_accuracy: 0.2703 - val_aux1_accuracy: 0.2318 - val_aux2_accuracy: 0.2361\n",
+      "It took 9769.967229366302 seconds to complete the training\n"
      ]
     }
    ],
@@ -1484,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,15 +1556,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "196/196 [==============================] - 12s 63ms/step - loss: 22.8147 - final_loss: 6.1482 - aux1_loss: 9.6422 - aux2_loss: 7.0244 - final_accuracy: 0.2918 - aux1_accuracy: 0.2573 - aux2_accuracy: 0.2690\n",
-      "{'loss': 22.814708670791315, 'final_loss': 6.1481876, 'aux1_loss': 9.642157, 'aux2_loss': 7.0243645, 'final_accuracy': 0.29182753, 'aux1_accuracy': 0.2572796, 'aux2_accuracy': 0.26898327}\n"
+      "196/196 [==============================] - 17s 88ms/step - loss: 27.7303 - final_loss: 7.9470 - aux1_loss: 10.3892 - aux2_loss: 9.3941 - final_accuracy: 0.2700 - aux1_accuracy: 0.2307 - aux2_accuracy: 0.2367\n",
+      "{'loss': 27.730298363432592, 'final_loss': 7.9470177, 'aux1_loss': 10.389216, 'aux2_loss': 9.394062, 'final_accuracy': 0.27002895, 'aux1_accuracy': 0.23069498, 'aux2_accuracy': 0.23668759}\n"
      ]
     }
    ],
