added improved eval logs and updated notebook

--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -930,9 +930,9 @@
     "    test_df = test_df.iloc[:,[0,1]].rename({0:\"filename\", 1:\"class\"}, axis=1)\n",
     "    return test_df\n",
     "\n",
-    "def get_train_valid_test_data_generators(batch_size):\n",
+    "def get_train_valid_test_data_generators(batch_size, target_size):\n",
     "    # Define a Keras ImageDataGenerator with image centering (subtract mean)\n",
-    "    target_size = (56, 56)\n",
+    "    \n",
     "    image_gen = ImageDataGenerator(samplewise_center=True)\n",
     "\n",
     "    # Define a training data generator\n",
@@ -963,9 +963,9 @@
     "\n",
     "# The model was really struggling with batch size 32\n",
     "batch_size = 128\n",
-    "\n",
+    "target_size = (56, 56)\n",
     "# Getting the train,valid, test data generators\n",
-    "train_gen, valid_gen, test_gen = get_train_valid_test_data_generators(batch_size)\n",
+    "train_gen, valid_gen, test_gen = get_train_valid_test_data_generators(batch_size, target_size)\n",
     "# Modifying the data generators to fit the model targets\n",
     "train_gen_aux = data_gen_aux(train_gen)\n",
     "valid_gen_aux = data_gen_aux(valid_gen)\n",
