Cleand up image generator code

--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -90,9 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file already exists.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import requests\n",
@@ -110,11 +118,12 @@
     "    # Write to a file\n",
     "    with open(os.path.join('data','tiny-imagenet-200.zip'), 'wb') as f:\n",
     "        f.write(r.content)\n",
-    "    \n",
-    "    with zipfile.ZipFile(os.path.join('data','tiny-imagenet-200.zip'), 'r') as zip_ref:\n",
-    "        zip_ref.extractall('data')\n",
     "else:\n",
-    "    print(\"The file already exists.\")"
+    "    print(\"The file already exists.\")\n",
+    "    \n",
+    "if not os.path.exists(os.path.join('data', 'tiny-imagenet-200')):\n",
+    "    with zipfile.ZipFile(os.path.join('data','tiny-imagenet-200.zip'), 'r') as zip_ref:\n",
+    "        zip_ref.extractall('data')"
    ]
   },
   {
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +324,7 @@
        "24  n03544143                                          hourglass"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +439,7 @@
        "4  n07749582                  lemon      500"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +484,7 @@
        "Name: n_train, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +589,7 @@
        "max       64.0     64.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +722,7 @@
        "max    10.000000  255.000000  219.122152"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,67 +742,6 @@
     "img_df = pd.DataFrame.from_records(images)\n",
     "img_df.columns = [\"Min\", \"Max\", \"Mean\"]\n",
     "img_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creating a validation set\n",
-    "\n",
-    "In the dataset, we currently have a,\n",
-    "\n",
-    "* Training set: `train` directory\n",
-    "* Testing set: `val` directory\n",
-    "\n",
-    "But to properly train a model we need three datasets,\n",
-    "\n",
-    "* Training set - Used to train the model\n",
-    "* Validation set - Used to continuously monitor model performance while training\n",
-    "* Testing set - Used to test the model, only after training finishes\n",
-    "\n",
-    "Therefore, we will separate a 10% from training data as validation data to a new folder `train_val`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import random\n",
-    "seed=4321\n",
-    "random.seed(seed)\n",
-    "\n",
-    "def create_validation_set(src_dir, dst_dir, validation_split=0.2):\n",
-    "    # Create the directori if doesn't exist\n",
-    "    if not os.path.exists(dst_dir):\n",
-    "        os.makedirs(dst_dir)\n",
-    "    # Got through each sub dir in the folder\n",
-    "    for f in os.listdir(src_dir):        \n",
-    "        if os.path.isdir(os.path.join(src_dir,f)):                 \n",
-    "            sub_dir = os.path.join(src_dir, f, 'images')                        \n",
-    "            target_sub_dir = os.path.join(dst_dir, f, 'images')\n",
-    "            # For each subfolder create a subfolder in the destination directory\n",
-    "            if not os.path.exists(target_sub_dir):\n",
-    "                os.makedirs(target_sub_dir)\n",
-    "            # All the images in the training sub dir\n",
-    "            sub_images = [os.path.join(sub_dir, ff) for ff in os.listdir(sub_dir) if ff.lower().endswith('jpeg')]\n",
-    "            # Create a random sample from the training data\n",
-    "            val_images = random.sample(sub_images, int(len(sub_images)*validation_split))\n",
-    "            # Copy the data to the validation directory\n",
-    "            for vimg in val_images:\n",
-    "                shutil.move(vimg, target_sub_dir)\n",
-    "\n",
-    "if not os.path.exists(os.path.join('data','tiny-imagenet-200', 'train_val')):\n",
-    "    create_validation_set(\n",
-    "        os.path.join('data','tiny-imagenet-200', 'train'), \n",
-    "        os.path.join('data','tiny-imagenet-200', 'train_val'), \n",
-    "        0.1)\n",
-    "else:\n",
-    "    print(\"The directory {} already exists. If you need to separate the validation set again, follow the following steps.\\n\"+\n",
-    "         (\"1. Delete the tiny-imagenet-200 folder.\\n2.Extract the tiny-imagenet-200.zip in place.\\n3.Run this cell\"))"
    ]
   },
   {
@@ -905,12 +853,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating the data generators"
+    "## ## Creating the data generators\n",
+    "\n",
+    "In the dataset, we currently have a,\n",
+    "\n",
+    "* Training set: `train` directory\n",
+    "* Testing set: `val` directory\n",
+    "\n",
+    "But to properly train a model we need three datasets,\n",
+    "\n",
+    "* Training set - Used to train the model\n",
+    "* Validation set - Used to continuously monitor model performance while training\n",
+    "* Testing set - Used to test the model, only after training finishes\n",
+    "\n",
+    "Therefore, we will separate a 10% from training data and feed this data through as a separate generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +885,8 @@
     }
    ],
    "source": [
+    "from functools import partial\n",
+    "\n",
     "def get_test_labels_df(test_labels_path):\n",
     "    \"\"\" Reading the test data labels for all files in the test set as a data frame \"\"\"\n",
     "    test_df = pd.read_csv(test_labels_path, sep='\\t', index_col=None, header=None)\n",
@@ -933,19 +896,21 @@
     "def get_train_valid_test_data_generators(batch_size, target_size):\n",
     "    # Define a Keras ImageDataGenerator with image centering (subtract mean)\n",
     "    \n",
-    "    image_gen = ImageDataGenerator(samplewise_center=True)\n",
+    "    image_gen = ImageDataGenerator(samplewise_center=True, validation_split=0.1)\n",
     "\n",
     "    # Define a training data generator\n",
-    "    train_gen = image_gen.flow_from_directory(\n",
-    "        os.path.join('data','tiny-imagenet-200', 'train'), target_size=target_size, classes=None,\n",
-    "        class_mode='categorical', batch_size=batch_size, shuffle=True, seed=random_seed\n",
-    "    )\n",
+    "    partial_flow_func = partial(\n",
+    "        image_gen.flow_from_directory, \n",
+    "        directory=os.path.join('data','tiny-imagenet-200', 'train'), \n",
+    "        target_size=target_size, classes=None,\n",
+    "        class_mode='categorical', batch_size=batch_size, \n",
+    "        shuffle=True, seed=random_seed)\n",
     "    \n",
-    "    # Define a validation data generator\n",
-    "    valid_gen = image_gen.flow_from_directory(\n",
-    "        os.path.join('data','tiny-imagenet-200',  'train_val'), target_size=target_size, classes=None,\n",
-    "        class_mode='categorical', batch_size=batch_size, shuffle=False, seed=random_seed\n",
-    "    )\n",
+    "    # Get the training data subset\n",
+    "    train_gen = partial_flow_func(subset='training')\n",
+    "    # Get the validation data subset\n",
+    "    valid_gen = partial_flow_func(subset='validation')\n",
+    "    \n",
     "    \n",
     "    # Define a testing data generator\n",
     "    # This function uses flow_from_dataframe instead of flow_from_directory\n",
@@ -970,6 +935,95 @@
     "train_gen_aux = data_gen_aux(train_gen)\n",
     "valid_gen_aux = data_gen_aux(valid_gen)\n",
     "test_gen_aux = data_gen_aux(test_gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trial\n",
+      "[195  43  71 122  94 127 141 154 175 116  62  50  24  45 134 159 149 188\n",
+      " 101  40  54 158  47  12  61  69 113  75  82 195  80  60 118  46 101  25\n",
+      " 124 160 150   4 127  44 106  33  56 145 115 181  48  26 198  75  71  95\n",
+      " 172 180 142 185  17  54  14  92 156 119  76  39 183 147  95  52 140  55\n",
+      " 155 116 148 153 187  90 154  66 199  24   8  67 141 168  72  46 158  54\n",
+      "  10  72  46  31  70  17 183 193 140 117  43  72  81 119  72  93   0 193\n",
+      "  80  68 165  77  64  15  35 191 142 154 131  35  23  97 152 174 152  12\n",
+      "  45 147]\n",
+      "[198   6 148  28  97 117   1  70 172 181 106 121  29 197 123  63  46  67\n",
+      " 191  39  84 188  41 111 182 103  67  90 155  83  59  63  38  99 135 106\n",
+      " 171  22   8 171  12 131  15 164   8 161  73  22   7  93 172 100 171 151\n",
+      " 142  37 164  41  10  71 110 159 170 118 182  68  72   5  44 193  83   4\n",
+      " 176  67 128 116  59  46  81   6   0 127  10  20 196 121  27 145 195 135\n",
+      " 179 130 115 157 144  24   1  40 183  75  86 116 119 176  54 107 149  52\n",
+      " 105 133  45 125 125 185 148  76 191  40 176   1  58 108 162 151 173 100\n",
+      " 119 113]\n",
+      "[100 176  20 139  51  22 159  15  44 133  95 160 127 179  33  57 191 149\n",
+      "  66  50  19 149 170  66  62  37 179 177 180 102 170 177  11  81   4  92\n",
+      " 167 178 102 135  44  87 134  44  22 145 148 185 137  24 193 128  80  26\n",
+      "  40  81 158 188  61  18  28  17  64  78 173   9  92 179  57 168 143 132\n",
+      " 113 118  16  89 167  91  26 130  27  13  55 132  23 157  98  39 190 135\n",
+      " 198 102 182  28  57  26  55  74   6 179 139 124 122 100 162 170 120  38\n",
+      " 123 177  76  61  94 137 187 117  21 134  20  57 129 192  35  99  17  15\n",
+      "  36 101]\n",
+      "trial\n",
+      "[195  43  71 122  94 127 141 154 175 116  62  50  24  45 134 159 149 188\n",
+      " 101  40  54 158  47  12  61  69 113  75  82 195  80  60 118  46 101  25\n",
+      " 124 160 150   4 127  44 106  33  56 145 115 181  48  26 198  75  71  95\n",
+      " 172 180 142 185  17  54  14  92 156 119  76  39 183 147  95  52 140  55\n",
+      " 155 116 148 153 187  90 154  66 199  24   8  67 141 168  72  46 158  54\n",
+      "  10  72  46  31  70  17 183 193 140 117  43  72  81 119  72  93   0 193\n",
+      "  80  68 165  77  64  15  35 191 142 154 131  35  23  97 152 174 152  12\n",
+      "  45 147]\n",
+      "[198   6 148  28  97 117   1  70 172 181 106 121  29 197 123  63  46  67\n",
+      " 191  39  84 188  41 111 182 103  67  90 155  83  59  63  38  99 135 106\n",
+      " 171  22   8 171  12 131  15 164   8 161  73  22   7  93 172 100 171 151\n",
+      " 142  37 164  41  10  71 110 159 170 118 182  68  72   5  44 193  83   4\n",
+      " 176  67 128 116  59  46  81   6   0 127  10  20 196 121  27 145 195 135\n",
+      " 179 130 115 157 144  24   1  40 183  75  86 116 119 176  54 107 149  52\n",
+      " 105 133  45 125 125 185 148  76 191  40 176   1  58 108 162 151 173 100\n",
+      " 119 113]\n",
+      "[100 176  20 139  51  22 159  15  44 133  95 160 127 179  33  57 191 149\n",
+      "  66  50  19 149 170  66  62  37 179 177 180 102 170 177  11  81   4  92\n",
+      " 167 178 102 135  44  87 134  44  22 145 148 185 137  24 193 128  80  26\n",
+      "  40  81 158 188  61  18  28  17  64  78 173   9  92 179  57 168 143 132\n",
+      " 113 118  16  89 167  91  26 130  27  13  55 132  23 157  98  39 190 135\n",
+      " 198 102 182  28  57  26  55  74   6 179 139 124 122 100 162 170 120  38\n",
+      " 123 177  76  61  94 137 187 117  21 134  20  57 129 192  35  99  17  15\n",
+      "  36 101]\n",
+      "(2, 384)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import tee\n",
+    "all_labels = []\n",
+    "n_trials = 10\n",
+    "\n",
+    "valid_gen_test = tee(valid_gen, n_trials)\n",
+    "\n",
+    "for i in range(n_trials):\n",
+    "    print('trial')    \n",
+    "    labels = []\n",
+    "    for j in range(5):\n",
+    "        _, ohe = next(valid_gen_test[i])\n",
+    "        # Convert one hot encoded to class labels\n",
+    "        labels.append(np.argmax(ohe, axis=-1))\n",
+    "        \n",
+    "    # Concat all labels\n",
+    "    labels = np.reshape(np.concatenate(labels, axis=0), (1,-1))        \n",
+    "    all_labels.append(labels)\n",
+    "\n",
+    "# Concat all labels accross all trials\n",
+    "all_labels = np.concatenate(all_labels, axis=0)\n",
+    "\n",
+    "# Assert the labels are equal across all trials\n",
+    "assert np.all(np.all(all_labels == all_labels[0,:], axis=0)), \"Labels across multiple trials were not equal\""
    ]
   },
   {
@@ -1423,13 +1477,7 @@
       "704/704 [==============================] - 207s 293ms/step - loss: 1.7585 - final_loss: 0.5178 - aux1_loss: 0.5992 - aux2_loss: 0.6416 - final_accuracy: 0.8387 - aux1_accuracy: 0.8140 - aux2_accuracy: 0.8014 - val_loss: 18.3472 - val_final_loss: 5.7840 - val_aux1_loss: 6.2842 - val_aux2_loss: 6.2790 - val_final_accuracy: 0.2745 - val_aux1_accuracy: 0.2493 - val_aux2_accuracy: 0.2422\n",
       "Epoch 20/50\n",
       "704/704 [==============================] - 207s 293ms/step - loss: 1.5724 - final_loss: 0.4597 - aux1_loss: 0.5341 - aux2_loss: 0.5786 - final_accuracy: 0.8552 - aux1_accuracy: 0.8323 - aux2_accuracy: 0.8195 - val_loss: 19.0875 - val_final_loss: 5.9830 - val_aux1_loss: 6.6104 - val_aux2_loss: 6.4941 - val_final_accuracy: 0.2794 - val_aux1_accuracy: 0.2380 - val_aux2_accuracy: 0.2364\n",
-      "Epoch 21/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 21/50\n",
       "704/704 [==============================] - 189s 269ms/step - loss: 1.4022 - final_loss: 0.4241 - aux1_loss: 0.4636 - aux2_loss: 0.5145 - final_accuracy: 0.8653 - aux1_accuracy: 0.8516 - aux2_accuracy: 0.8367 - val_loss: 19.8646 - val_final_loss: 6.1997 - val_aux1_loss: 6.8945 - val_aux2_loss: 6.7704 - val_final_accuracy: 0.2704 - val_aux1_accuracy: 0.2319 - val_aux2_accuracy: 0.2384\n",
       "Epoch 22/50\n",
       "704/704 [==============================] - 190s 270ms/step - loss: 1.2823 - final_loss: 0.3823 - aux1_loss: 0.4269 - aux2_loss: 0.4730 - final_accuracy: 0.8786 - aux1_accuracy: 0.8619 - aux2_accuracy: 0.8510 - val_loss: 20.3233 - val_final_loss: 6.3067 - val_aux1_loss: 7.1902 - val_aux2_loss: 6.8264 - val_final_accuracy: 0.2683 - val_aux1_accuracy: 0.2331 - val_aux2_accuracy: 0.2379\n",
