Cleand up image generator code

--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -939,64 +939,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trial\n",
-      "[195  43  71 122  94 127 141 154 175 116  62  50  24  45 134 159 149 188\n",
-      " 101  40  54 158  47  12  61  69 113  75  82 195  80  60 118  46 101  25\n",
-      " 124 160 150   4 127  44 106  33  56 145 115 181  48  26 198  75  71  95\n",
-      " 172 180 142 185  17  54  14  92 156 119  76  39 183 147  95  52 140  55\n",
-      " 155 116 148 153 187  90 154  66 199  24   8  67 141 168  72  46 158  54\n",
-      "  10  72  46  31  70  17 183 193 140 117  43  72  81 119  72  93   0 193\n",
-      "  80  68 165  77  64  15  35 191 142 154 131  35  23  97 152 174 152  12\n",
-      "  45 147]\n",
-      "[198   6 148  28  97 117   1  70 172 181 106 121  29 197 123  63  46  67\n",
-      " 191  39  84 188  41 111 182 103  67  90 155  83  59  63  38  99 135 106\n",
-      " 171  22   8 171  12 131  15 164   8 161  73  22   7  93 172 100 171 151\n",
-      " 142  37 164  41  10  71 110 159 170 118 182  68  72   5  44 193  83   4\n",
-      " 176  67 128 116  59  46  81   6   0 127  10  20 196 121  27 145 195 135\n",
-      " 179 130 115 157 144  24   1  40 183  75  86 116 119 176  54 107 149  52\n",
-      " 105 133  45 125 125 185 148  76 191  40 176   1  58 108 162 151 173 100\n",
-      " 119 113]\n",
-      "[100 176  20 139  51  22 159  15  44 133  95 160 127 179  33  57 191 149\n",
-      "  66  50  19 149 170  66  62  37 179 177 180 102 170 177  11  81   4  92\n",
-      " 167 178 102 135  44  87 134  44  22 145 148 185 137  24 193 128  80  26\n",
-      "  40  81 158 188  61  18  28  17  64  78 173   9  92 179  57 168 143 132\n",
-      " 113 118  16  89 167  91  26 130  27  13  55 132  23 157  98  39 190 135\n",
-      " 198 102 182  28  57  26  55  74   6 179 139 124 122 100 162 170 120  38\n",
-      " 123 177  76  61  94 137 187 117  21 134  20  57 129 192  35  99  17  15\n",
-      "  36 101]\n",
-      "trial\n",
-      "[195  43  71 122  94 127 141 154 175 116  62  50  24  45 134 159 149 188\n",
-      " 101  40  54 158  47  12  61  69 113  75  82 195  80  60 118  46 101  25\n",
-      " 124 160 150   4 127  44 106  33  56 145 115 181  48  26 198  75  71  95\n",
-      " 172 180 142 185  17  54  14  92 156 119  76  39 183 147  95  52 140  55\n",
-      " 155 116 148 153 187  90 154  66 199  24   8  67 141 168  72  46 158  54\n",
-      "  10  72  46  31  70  17 183 193 140 117  43  72  81 119  72  93   0 193\n",
-      "  80  68 165  77  64  15  35 191 142 154 131  35  23  97 152 174 152  12\n",
-      "  45 147]\n",
-      "[198   6 148  28  97 117   1  70 172 181 106 121  29 197 123  63  46  67\n",
-      " 191  39  84 188  41 111 182 103  67  90 155  83  59  63  38  99 135 106\n",
-      " 171  22   8 171  12 131  15 164   8 161  73  22   7  93 172 100 171 151\n",
-      " 142  37 164  41  10  71 110 159 170 118 182  68  72   5  44 193  83   4\n",
-      " 176  67 128 116  59  46  81   6   0 127  10  20 196 121  27 145 195 135\n",
-      " 179 130 115 157 144  24   1  40 183  75  86 116 119 176  54 107 149  52\n",
-      " 105 133  45 125 125 185 148  76 191  40 176   1  58 108 162 151 173 100\n",
-      " 119 113]\n",
-      "[100 176  20 139  51  22 159  15  44 133  95 160 127 179  33  57 191 149\n",
-      "  66  50  19 149 170  66  62  37 179 177 180 102 170 177  11  81   4  92\n",
-      " 167 178 102 135  44  87 134  44  22 145 148 185 137  24 193 128  80  26\n",
-      "  40  81 158 188  61  18  28  17  64  78 173   9  92 179  57 168 143 132\n",
-      " 113 118  16  89 167  91  26 130  27  13  55 132  23 157  98  39 190 135\n",
-      " 198 102 182  28  57  26  55  74   6 179 139 124 122 100 162 170 120  38\n",
-      " 123 177  76  61  94 137 187 117  21 134  20  57 129 192  35  99  17  15\n",
-      "  36 101]\n",
-      "(2, 384)\n"
+      "Successful! Labels across all trials were consistent.\n"
      ]
     }
    ],
@@ -1007,8 +957,7 @@
     "\n",
     "valid_gen_test = tee(valid_gen, n_trials)\n",
     "\n",
-    "for i in range(n_trials):\n",
-    "    print('trial')    \n",
+    "for i in range(n_trials):    \n",
     "    labels = []\n",
     "    for j in range(5):\n",
     "        _, ohe = next(valid_gen_test[i])\n",
@@ -1023,7 +972,8 @@
     "all_labels = np.concatenate(all_labels, axis=0)\n",
     "\n",
     "# Assert the labels are equal across all trials\n",
-    "assert np.all(np.all(all_labels == all_labels[0,:], axis=0)), \"Labels across multiple trials were not equal\""
+    "assert np.all(np.all(all_labels == all_labels[0,:], axis=0)), \"Labels across multiple trials were not equal\"\n",
+    "print(\"Successful! Labels across all trials were consistent.\")"
    ]
   },
   {
