Fixed both ch07 and ch06 cleaned up

--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -90,14 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file already exists.\n"
+      "The zip file already exists.\n",
+      "The extracted data already exists\n"
      ]
     }
    ],
@@ -119,11 +120,13 @@
     "    with open(os.path.join('data','tiny-imagenet-200.zip'), 'wb') as f:\n",
     "        f.write(r.content)\n",
     "else:\n",
-    "    print(\"The file already exists.\")\n",
+    "    print(\"The zip file already exists.\")\n",
     "    \n",
     "if not os.path.exists(os.path.join('data', 'tiny-imagenet-200')):\n",
     "    with zipfile.ZipFile(os.path.join('data','tiny-imagenet-200.zip'), 'r') as zip_ref:\n",
-    "        zip_ref.extractall('data')"
+    "        zip_ref.extractall('data')\n",
+    "else:\n",
+    "    print(\"The extracted data already exists\")"
    ]
   },
   {
@@ -853,7 +856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ## Creating the data generators\n",
+    "## Creating the data generators\n",
     "\n",
     "In the dataset, we currently have a,\n",
     "\n",
@@ -935,6 +938,13 @@
     "train_gen_aux = data_gen_aux(train_gen)\n",
     "valid_gen_aux = data_gen_aux(valid_gen)\n",
     "test_gen_aux = data_gen_aux(test_gen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validation that validation data is consistent always"
    ]
   },
   {
