changed section topic

--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validation that validation data is consistent always"
+    "## Validating the consistency of validation data"
    ]
   },
   {
