--- a/Ch02/2.1.Tensorflow_Fundamentals.ipynb
+++ b/Ch02/2.1.Tensorflow_Fundamentals.ipynb
@@ -408,7 +408,7 @@
     "\n",
     "### The data\n",
     "\n",
-    "Here to learn these operations, we will be obtraining various effects from an image. The image we will be using is famously known as \"Lena\". \n",
+    "Here to learn these operations, we will be obtraining various effects from an image. We will use a famous computer vision image of a baboon. \n",
     "\n",
     "### Matrix Multiplication\n",
     "\n",
@@ -489,7 +489,7 @@
     "\n",
     "The convolution operation shifts a small window of the image while performing a spefic computation at each position, using the parameters of the window and the pixels overlapping the window. Specifically, the computation is taking element-wise multiplication and summing the values to produce a single scalar. \n",
     "\n",
-    "We will use the convolution operation to perform edge detection on the image of Lena."
+    "We will use the convolution operation to perform edge detection on the image of the baboon."
    ]
   },
   {
@@ -713,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
